LU-7372 mgs: reprocess all locks at device fini

This is to avoid a case that IR lock revocation is going on when
the obd is being stopped, an extra ldlm_reprocess_all_ns() is
required to make revocation process move forward.

Test-Parameters: envdefinitions=SLOW=yes,ONLY=26 	testlist=replay-dual,replay-dual,replay-dual,replay-dual
Signed-off-by: Jinshan Xiong <jinshan.xiong@intel.com>
Change-Id: I43ab1df9c8fe5aea15da6c90175fd08a0b099ea2